--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/ttelmo1/projeto13-batepapo-uol-api#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongodb": "^4.13.0",
     "nodemon": "^2.0.20"
   }
 }
